# neuralnetwork

./: .gitignore  CMakeLists.txt  CMakeSettings.json
inc/: AddOper.h  Tensor.h
src/: AddOper.cpp  CMakeLists.txt
test/: CMakeLists.txt  main.cpp
